[tool.poetry]
name = "tryst"
version = "1.0.1"
description = ""
authors = ["Priyanshu Sinha <officialpriyanshusinha@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
tryst = "tryst.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
